fix project container wrap and some links

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ section {
 
 .project-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .project-item-title {
@@ -211,4 +212,8 @@ footer {
     flex-direction: column;
     align-items: center;
   }
+}
+
+.github-link {
+  text-decoration: none;
 }
